test/error/ConstructorParameters.ci
public class Test
{
	public Test(int foo) { //ERROR: Expected RightParenthesis, got Id //ERROR: Constructor parameters not supported
	}
}
